RESOLVED FIXED164350
REGRESSION (r208025) GraphicsContext state stack assertions loading webkit.org
https://bugs.webkit.org/show_bug.cgi?id=164350
Summary REGRESSION (r208025) GraphicsContext state stack assertions loading webkit.org
Simon Fraser (smfr)
Reported 2016-11-02 16:52:40 PDT
REGRESSION (r208025) GraphicsContext state stack assertions loading webkit.org
Attachments
Patch (17.82 KB, patch)
2016-11-02 16:58 PDT, Simon Fraser (smfr)
dino: review+
Simon Fraser (smfr)
Comment 1 2016-11-02 16:58:57 PDT
Dean Jackson
Comment 2 2016-11-02 17:03:57 PDT
Comment on attachment 293719 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=293719&action=review > Source/WebCore/ChangeLog:10 > + This confused the RenderLayer paintWithTransparency code, triggering mismsatched GrpahicsContext typo graphics > Source/WebCore/ChangeLog:17 > + Rather than depend on the super confusing animation state, use a bool out param from animate() to say Nit: super-confusing :) > Source/WebCore/ChangeLog:26 > + (WebCore::CSSPropertyAnimation::blendProperties): Log after blending so the log shows the blended style. Haha. > Source/WebCore/page/animation/CompositeAnimation.cpp:336 > - bool runningOrFillingForwards = !keyframeAnim->waitingToStart() && !keyframeAnim->postActive(); > - forceStackingContext |= runningOrFillingForwards && keyframeAnim->triggersStackingContext(); > + forceStackingContext |= didBlendStyle && keyframeAnim->triggersStackingContext(); Are you sure that didBlendStyle covers !keyframeAnim->waitingToStart() && !keyframeAnim->postActive()?
Simon Fraser (smfr)
Comment 3 2016-11-02 17:06:59 PDT
(In reply to comment #2) > > Source/WebCore/page/animation/CompositeAnimation.cpp:336 > > - bool runningOrFillingForwards = !keyframeAnim->waitingToStart() && !keyframeAnim->postActive(); > > - forceStackingContext |= runningOrFillingForwards && keyframeAnim->triggersStackingContext(); > > + forceStackingContext |= didBlendStyle && keyframeAnim->triggersStackingContext(); > > Are you sure that didBlendStyle covers !keyframeAnim->waitingToStart() && > !keyframeAnim->postActive()? Yes, because animate() only sets it to true when it produces new style.
Simon Fraser (smfr)
Comment 4 2016-11-02 17:23:19 PDT
Simon Fraser (smfr)
Comment 5 2016-11-02 19:47:28 PDT
Followup to fix reflections asserting in https://trac.webkit.org/r208319
Note You need to log in before you can comment on or make changes to this bug.